--- a/front/package.json
+++ b/front/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.15.11",
+    "pinia": "^2.0.31",
     "quasar": "^2.11.6",
     "vue": "^3.2.45"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.3.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "sass": "^1.32.12",
-    "vite": "^4.1.0",
     "eslint": "^8.25.0",
-    "eslint-plugin-vue": "^9.6.0"
+    "eslint-plugin-vue": "^9.6.0",
+    "sass": "^1.32.12",
+    "vite": "^4.1.0"
   }
 }
