--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,8 @@
     "@quasar/extras": "^1.15.11",
     "pinia": "^2.0.31",
     "quasar": "^2.11.6",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.3.0",
