--- a/front/package.json
+++ b/front/package.json
@@ -9,18 +9,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@quasar/extras": "^1.15.11",
+    "vite": "^4.1.0",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
+    "@vitejs/plugin-vue": "^4.0.0",
     "pinia": "^2.0.31",
     "quasar": "^2.11.6",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "@quasar/extras": "^1.15.11",
+    "@quasar/vite-plugin": "^1.3.0"
   },
   "devDependencies": {
-    "@quasar/vite-plugin": "^1.3.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "eslint": "^8.25.0",
-    "eslint-plugin-vue": "^9.6.0",
-    "sass": "^1.32.12",
-    "vite": "^4.1.0"
+    "@babel/core": "^7.19.1",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-env": "^7.19.4",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.35.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin": "^1.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.9.0",
+    "sass": "^1.32.12"
+  },
+  "lint-staged": {
+    "./src/**/*.{js,vue}": [
+      "node_modules/.bin/eslint",
+      "git add"
+    ]
   }
 }
