--- a/front/package.json
+++ b/front/package.json
@@ -9,14 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vite": "^4.1.0",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
+    "@quasar/extras": "^1.15.11",
+    "@quasar/vite-plugin": "^1.3.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "moment": "^2.29.4",
     "pinia": "^2.0.31",
     "quasar": "^2.11.6",
-    "@quasar/extras": "^1.15.11",
-    "@quasar/vite-plugin": "^1.3.0"
+    "vite": "^4.1.0",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
