add dockerfile (fusionauth, node-api, node-schedule), update docker-compose

--- a/.env.exmpale
+++ b/.env.exmpale
@@ -8,3 +8,11 @@ POSTGRES_HOST=postgres
 POSTGRES_POOL_MAX=20
 POSTGRES_POOL_MIN=5
 POSTGRES_CONNECTION_TIMEOUT=60000
+
+# FusionAuth
+DATABASE_ROOT_USERNAME=developer
+DATABASE_ROOT_PASSWORD=maratVikaSofa_404Laith
+DATABASE_USERNAME=fusionauth
+DATABASE_PASSWORD=hkaLBM3RVnyYeYeqE3WI1w2e4Avpy0Wd5O3s3
+FUSIONAUTH_APP_MEMORY=512M
+ES_JAVA_OPTS="-Xms512m -Xmx512m"
