--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.4",
     "pinia": "^2.0.31",
     "quasar": "^2.11.6",
+    "axios": "0.24.0",
     "vite": "^4.1.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
