--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.4'
 
 x-base:
   &base
@@ -29,11 +29,12 @@ services:
       - "127.0.0.1:8081:8081"
     volumes:
       - ./api-gateway/app:/app
-      - ./api-gateway/app/dist:/app/dist
+      - ./api-gateway/app/dist:/dist
       - ./api-gateway/app/node_modules:/node_modules
     env_file:
       - .env
     mem_reservation: 128m
+    mem_limit: 1g
 
   node_schedule:
     <<: *base
@@ -59,6 +60,21 @@ services:
       - ./postgres/db_backups:/backups
       - ./postgres/pg:/var/lib/postgresql/data
     mem_reservation: 128m
+
+  nginx:
+    <<: *base
+    build: ./containers/nginx
+    ports:
+      - "127.0.0.1:80:80"
+    volumes:
+      - /etc/localtime:/etc/localtime/:ro
+      - ./api-gateway/app:/app
+    command: nginx -g "daemon off;"
+    depends_on:
+      - node_api
+      - node_schedule
+    mem_reservation: 20m
+    mem_limit: 512m
 
 networks:
   net:
