--- a/front/package.json
+++ b/front/package.json
@@ -12,13 +12,15 @@
     "@quasar/extras": "^1.15.11",
     "@quasar/vite-plugin": "^1.3.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "axios": "0.24.0",
     "moment": "^2.29.4",
     "pinia": "^2.0.31",
     "quasar": "^2.11.6",
-    "axios": "0.24.0",
     "vite": "^4.1.0",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue": "^3.3.4",
+    "vue-cookies": "^1.8.3",
+    "vue-router": "^4.1.6",
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
