--- a/services/api/app/package.json
+++ b/services/api/app/package.json
@@ -25,6 +25,7 @@
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.4.0",
+    "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.6",
     "nest-winston": "1.9.1",
     "reflect-metadata": "^0.1.13",
@@ -43,6 +44,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "class-validator": "^0.14.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
