--- a/services/auth/app/package.json
+++ b/services/auth/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "auth",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -26,9 +26,10 @@
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.0.0",
     "axios": "1.4.0",
-    "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "mysql2": "^3.3.0",
+    "class-validator": "^0.14.0",
+    "class-transformer": "^0.5.1",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
@@ -42,6 +43,7 @@
     "@nestjs/sequelize": "^9.0.2",
     "@nestjs/testing": "^9.0.0",
     "@types/cookie-parser": "^1.4.3",
+    "class-validator": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
@@ -62,22 +64,5 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
     "typescript": "^4.7.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
