--- a/services/auth/app/tsconfig.json
+++ b/services/auth/app/tsconfig.json
@@ -6,9 +6,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2017",
+    "target": "es2021",
     "sourceMap": true,
     "outDir": "./dist",
+    "include": ["src"],
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
