--- a/services/schedule/app/package.json
+++ b/services/schedule/app/package.json
@@ -12,12 +12,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -25,15 +20,15 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.0.0",
-    "class-validator": "^0.14.0",
+    "class-transformer": "^0.5.1",
     "mysql2": "^3.3.0",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.31.1",
-    "uuid": "^9.0.0",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize-typescript": "^2.1.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -41,6 +36,7 @@
     "@nestjs/sequelize": "^9.0.2",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
+    "class-validator": "^0.14.0",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
     "@types/sequelize": "^4.28.15",
@@ -53,29 +49,15 @@
     "jest": "29.5.0",
     "moment": "^2.29.4",
     "prettier": "^2.3.2",
+    "run-script-webpack-plugin": "^0.2.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.5",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^4.7.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "typescript": "^4.7.4",
+    "webpack": "^5.86.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
